Método make order, para realizar la orden de venta, restar inventario y llevar trazabilidad del inventario.

--- a/core/pos/templates/pos/index.html
+++ b/core/pos/templates/pos/index.html
@@ -40,6 +40,7 @@
             {% include 'pos/order_sumary.html' %}
         </div>
         <script src="{% static 'pos/utils/js/productForm.js' %}"></script>
+        <script src="{% static 'pos/utils/js/makeOrder.js' %}"></script>
     </div>
     <script>
         new DataTable('#productos', {
