Algunas mejoras de UI

--- a/core/pos/templates/pos/order_sumary.html
+++ b/core/pos/templates/pos/order_sumary.html
@@ -4,7 +4,7 @@
     }
 </style>
 <!-- Barra superior -->
-<div class="border border-info flex-fill d-flex flex-column" style="min-height: 0;">
+<div class=" flex-fill d-flex flex-column" style="min-height: 0;">
     <div class="card-body p-0 pt-2 w-100 d-flex nav-tabs" style="flex: 0 0 0;">
         <ul class="nav flex-grow-1">
             <li class="nav-item">
@@ -36,7 +36,7 @@
     </div>
 </div>
 <!-- Barra inferior -->
-<div class="p-2 border-info border" style="height: 300px;">
+<div class="p-2 border" style="height: 300px;">
     <!-- Barra inferior - superior -->
     <div style="height: 70%;">
         <!-- Resumen de orden -->
@@ -79,12 +79,12 @@
     <div class="border-top" style="height: 30%;">
         <!-- Botones de orden -->
         <div class="d-flex flex-row">
-            <button type="button" class="btn btn-secondary square-button fs-6 m-1" style="height: 80px; width: 100%;">
+            {% comment %} <button type="button" class="btn btn-secondary square-button fs-6 m-1" style="height: 80px; width: 100%;">
                 <i class="fas fa-coins fs-4"></i>
                 <span class="d-block">
                     Cal. Vueltas
                 </span>
-            </button>
+            </button> {% endcomment %}
             <button type="button" class="btn btn-secondary square-button fs-6 m-1" style="height: 80px; width: 100%;">
                 <i class="fas fa-user-pen d-block fs-4"></i>
                 <span class="d-block">
