--- a/core/pos/templates/pos/index.html
+++ b/core/pos/templates/pos/index.html
@@ -30,12 +30,12 @@
     <script src="{% static 'js/jquery-confirm.min.js' %}"></script>
     <script src="{% static 'js/jquery.priceformat.min.js' %}"></script>
     <script src="{% static 'pos/utils/js/orderReception.js' %}"></script>
-    <div class="d-flex align-items-stretch border-danger border p-3" style="height: 100vh;">
-        <div class="p-2 border-danger border flex-fill">
+    <div class="d-flex align-items-stretch p-3" style="height: 100vh;">
+        <div class="p-2 border flex-fill">
             <!-- Barra lateral izquierda -->
             {% include 'pos/product_list.html' %}
         </div>
-        <div class="d-flex flex-column border-danger border-bottom border-top" style="width: 500px;">
+        <div class="d-flex flex-column" style="width: 500px;">
             <!-- Barra lateral derecha -->
             {% include 'pos/order_sumary.html' %}
         </div>
