--- a/core/products/templates/products/create.html
+++ b/core/products/templates/products/create.html
@@ -16,12 +16,21 @@
             <span class="input-group-text" id="basic-addon1"><span class="fas fa-dice-d6"></span></span>
             <input name="name" type="text" class="form-control" placeholder="Nombre de producto" required>
         </div>
+        <!-- CALCULATE PRICE -->
+        <div id="calculatePrice" style="display: none;" class="border-info border-bottom border-top p-2">
+            <h6 class=" navbar-text m-0 p-0">Calcular precio de venta (sin iva) y precio de compra en base a precio de venta final:</h6>
+            <div class="input-group mb-3">
+                <span class="input-group-text"><span class="fas fa-dollar-sign"></span></span>
+                <input type="number" value="0" class="form-control" id="inputCalculate" placeholder="Ingrese el precio de venta final">
+                <button type="button" class="btn btn-outline-secondary" id="btnCalculatePrice">Calcular</button>
+            </div>
+        </div>
         <!-- SELL PRICE -->
-        <small><i>*Nota: El precio del producto NO debe de incluir el IVA al estar activo, el sistema cálcula automáticamente el IVA sobre el PRECIO del producto.</i></small>
+        <small><i>*Nota: El precio del producto NO debe de incluir el IVA, el sistema cálcula automáticamente el IVA sobre el PRECIO de venta del producto.</i></small>
         <div class="input-group mb-3">
             <h6 class=" navbar-text pe-3">Precio de producto:</h6>
             <span class="input-group-text" id="basic-addon1"><span class="fas fa-dollar-sign"></span></span>
-            <input name="price" type="number" class="form-control" placeholder="Precio de venta de producto" step="any" required>
+            <input name="price" type="number" id="cSellPrice" class="form-control" placeholder="Precio de venta de producto" step="any" required>
             <!-- IVA -->
             <div class="form-check form-switch m-2">
                 <input class="form-check-input" type="checkbox" name="iva" id="flexSwitchCheckChecked" checked>
@@ -67,7 +76,7 @@
             <h6 class=" navbar-text m-0 p-0">Crear producto con inventario inicial:</h6>
             <div class=" input-group mb-3 mt-3">
                 <input type="datetime-local" name="datetime" class="form-control" required>
-                <input type="number" min="0" name="amount" placeholder="Cantidad" class="form-control" required>
+                <input type="number" min="0" name="amount" id="cBuyPrice" placeholder="Cantidad" class="form-control" required>
                 <input type="number" min="0" name="buy_price" placeholder="Precio de compra por unidad (Sin IVA)" class="form-control" required>
             </div>
         </div>
@@ -75,8 +84,10 @@
         <!-- SUBMIT -->
         <div class="btn-group input-group" role="group" aria-label="Basic outlined example">
             <a href="{% url 'products:index' %}" class="btn btn-outline-secondary">Cancelar</a>
-            <input type="checkbox" class="btn-check" name="initial_inv" id="btn-check-outlined" autocomplete="off">
-            <label class="btn btn-outline-primary" for="btn-check-outlined">¿Inventario inicial?</label>
+            <input type="checkbox" class="btn-check" name="initial_inv" id="btn-calculate" autocomplete="off">
+            <label class="btn btn-outline-secondary" for="btn-calculate">Calcular precio</label>
+            <input type="checkbox" class="btn-check" name="initial_inv" id="btn-inv" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btn-inv">¿Inventario inicial?</label>
             <button type="submit" class="btn btn-outline-success">Guardar</button>
         </div>
     </form>
@@ -87,11 +98,21 @@
     $(document).ready(function() {
         $('#bar-code').on('keydown', function(event) {
             if (event.keyCode === 13) {
-                $('#bar-code').prop("disabled", true)
+                $('#bar-code').prop("readonly", true)
             }
         });
-        $("#btn-check-outlined").click(function (e) {
+        $("#btn-inv").click(function (e) {
             $("#invDiv").toggle();
+        });
+        $("#btn-calculate").click(function (e) {
+            $("#calculatePrice").toggle();
+        });
+        $("#btnCalculatePrice").click(function (e) {
+            if ($("#inputCalculate").val() != 0) {
+                let input = parseInt($("#inputCalculate").val())/1.39
+                $("#cBuyPrice").val(input.toFixed());
+                $("#cSellPrice").val((input*1.20).toFixed());
+            }
         });
     });
     
