--- a/core/products/templates/products/edit.html
+++ b/core/products/templates/products/edit.html
@@ -83,7 +83,7 @@
     $(document).ready(function() {
         $('#bar-code').on('keydown', function(event) {
             if (event.keyCode === 13) {
-                $('#bar-code').prop("disabled", true)
+                $('#bar-code').prop("readonly", true)
             }
         });
     });
