Actualizar el diseño de la interfaz de usuario y mejorar la funcionalidad de los formularios en todas las plantillas.
- Cambiar los márgenes de los contenedores de 5rem a 2rem y estandarizar los anchos a 65vw para un mejor diseño responsivo.
- Añadir valores de fecha y hora por defecto a los formularios de creación de productos y existencias para mejorar la experiencia del usuario.
- Eliminar la función de cálculo de precios y simplificar el formulario de creación de productos
- Arreglar el manejo de eventos de entrada de código de barras con preventDefault()
- Añadir validación dinámica de campos obligatorios para las entradas iniciales de inventario
- Actualizar la zona horaria de UTC a América/Bogotá
- Eliminar los atributos obligatorios de las selecciones de categoría y proveedor en el formulario de edición de productos

--- a/core/categorys/templates/categorys/create.html
+++ b/core/categorys/templates/categorys/create.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 {% load static %}
-<div class="container align-content-start overflow-auto text-center" style="margin:  5rem auto; width: 1000px;">
+<div class="container align-content-start overflow-auto text-center" style="margin:  2rem auto; width: 65vw;">
     <div class="form-group">
         <h3 class="m-0">Crear categoria</h3>
     </div>
