--- a/core/categorys/templates/categorys/edit.html
+++ b/core/categorys/templates/categorys/edit.html
@@ -4,7 +4,7 @@
 {% load static %}
 <script src="{% static 'js/jquery-3.7.1.js' %}"></script>
 <script src="{% static 'js/jquery.priceformat.min.js' %}"></script>
-<div class="container align-content-start overflow-auto text-center" style="margin:  5rem auto; width: 1000px;">
+<div class="container align-content-start overflow-auto text-center" style="margin:  2rem auto; width: 65vw;">
     <div class="form-group">
         <h3 class="m-0">{{category.name}}</h3>
         <small class="text-muted">ID: {{category.id}}</small>
