Mejora de las interacciones y la gestión de errores de la interfaz de usuario del punto de venta
- Añadir animaciones suaves a los botones desplegables y de introducción de códigos de barras
- Eliminar el botón de envío de código de barras no utilizado de la plantilla de resumen de pedido
- Corrección de la lógica de cálculo de precios para gestionar correctamente los valores de moneda formateados.
- Añadir validación de código de barras vacío con notificaciones fáciles de usar
- Devolución de matrices vacías en lugar de estado de error para conjuntos de datos vacíos y evitar error en datatables.
- Enfoque automático del código de barras al cambiar su visibilidad

--- a/core/pos/templates/pos/order_sumary.html
+++ b/core/pos/templates/pos/order_sumary.html
@@ -70,7 +70,6 @@
         <div class="input-group mb-3" id="inputBarCode" style="display: none;">
             <span class="input-group-text"><span class="fas fa-barcode"></span></span>
             <input type="text" class="form-control" id="bar-code" placeholder="Seleccione para ingresar código de barras" aria-label="Código de barras">
-            <label class="btn btn-outline-secondary" id="submitBC" for="bar-code">Agregar</label>
         </div>
         <!-- Guardar en borrador -->
         <button class="btn btn-outline-primary w-100" id="btnDraft" type="button" disabled>Guardar en borrador</button>
@@ -110,7 +109,7 @@
 <script>
     $(document).ready(function() {
         $('#dropdbtn').click(function() {
-            $('#dropd').toggle();
+            $('#dropd').toggle("slow");
         });
         $('#actualOrder').click(function() {
             if ($('#allOrders').hasClass("active")) {
