Eliminar el campo IVA de los productos y ajustar la lógica relacionada en las vistas y formularios.

--- a/core/stock/templates/stock/edit.html
+++ b/core/stock/templates/stock/edit.html
@@ -54,7 +54,7 @@
                 <input type="hidden" name="id" value="{{ product_s.id }}">
                 <input type="datetime-local" name="datetime" class="form-control" value="{{ datetime }}" required>
                 <input type="number" min="0" name="amount" placeholder="Cantidad" class="form-control" required>
-                <input type="number" min="0" name="price" placeholder="Precio de compra por unidad (Sin IVA)" class="form-control" required>
+                <input type="number" min="0" name="price" placeholder="Precio de compra por unidad" class="form-control" required>
                 <button class="btn btn-outline-secondary" type="submit">Aceptar</button>
             </div>
         </form>
