--- a/core/products/templates/products/create.html
+++ b/core/products/templates/products/create.html
@@ -21,11 +21,6 @@
             <h6 class=" navbar-text pe-3">Precio de producto:</h6>
             <span class="input-group-text" id="basic-addon1"><span class="fas fa-dollar-sign"></span></span>
             <input name="price" type="number" id="cSellPrice" class="form-control" placeholder="Precio de venta de producto" step="any" required>
-            <!-- IVA -->
-            <div class="form-check form-switch m-2">
-                <input class="form-check-input" type="checkbox" name="iva" id="flexSwitchCheckChecked" checked>
-                <label class="form-check-label" for="flexSwitchCheckChecked">IVA</label>
-            </div>
         </div>
         <!-- CATEGORY -->
         <div class="input-group mb-3">
@@ -66,7 +61,10 @@
             <h6 class=" navbar-text m-0 p-0">Crear producto con inventario inicial:</h6>
             <div class=" input-group mb-3 mt-3">
                 <input type="number" min="0" name="amount" id="cAmmount" placeholder="Cantidad" class="form-control">
-                <input type="number" min="0" name="buy_price" id="cBuyPrice" placeholder="Precio de compra por unidad (Sin IVA)" class="form-control">
+                <div class="input-group">
+                    <span class="input-group-text" id="basic-addon1"><span class="fas fa-dollar-sign"></span></span>
+                    <input type="number" min="0" name="buy_price" id="cBuyPrice" placeholder="Precio de compra por unidad" class="form-control">
+                </div>
             </div>
         </div>
         
@@ -83,6 +81,12 @@
 <script>
 
     $(document).ready(function() {
+        $("#cSellPrice").on('input', function(e) {
+            console.log("a");
+            let current = $(this).val();
+            let buy_price = (current/1.39).toFixed();
+            $("#cBuyPrice").val(buy_price);
+        });
         $('#bar-code').on('keydown', function(event) {
             event.preventDefault();
             if (event.keyCode === 13) {
