Añadir funcionalidad para guardar y cargar órdenes como borrador en POS.

--- a/core/pos/templates/pos/order_sumary.html
+++ b/core/pos/templates/pos/order_sumary.html
@@ -40,7 +40,7 @@
     <!-- Barra inferior - superior -->
     <div style="height: 70%;">
         <!-- Resumen de orden -->
-        <div class="summary" style="height: 100px;">
+        <div class="summary">
             <p class="fw-normal">
                 <span class="fs-4">
                     <b>TOTAL: </b>
@@ -51,7 +51,7 @@
             </p>
         </div>
         <!-- Seleccion cliente -->
-        <div class="input-group mb-3 d-none">
+        <div class="input-group mb-3">
             <select class="form-select">
                 <option selected>Seleccione un cliente:</option>
                 <option value="1">Cliente</option>
