--- a/core/categorys/templates/categorys/create.html
+++ b/core/categorys/templates/categorys/create.html
@@ -12,7 +12,7 @@
         <div class="input-group mb-3">
             <h6 class=" navbar-text pe-3">Nombre de categoria:</h6>
             <span class="input-group-text" id="basic-addon1"><span class="fas fa-user-tag"></span></span>
-            <input name="name" type="text" class="form-control" placeholder="Nombre de categoria..">
+            <input name="name" type="text" class="form-control" placeholder="Nombre de categoria.." required>
         </div>
         <!-- DESCRIPTION -->
         <div class="input-group mb-3">
