--- a/core/categorys/templates/categorys/edit.html
+++ b/core/categorys/templates/categorys/edit.html
@@ -17,7 +17,7 @@
         <div class="input-group mb-3">
             <h6 class=" navbar-text pe-3">Nombre de categoria:</h6>
             <span class="input-group-text" id="basic-addon1"><span class="fas fa-dice-d6"></span></span>
-            <input name="name" type="text" class="form-control" placeholder="Nombre de producto" aria-label="Nombre de producto" aria-describedby="basic-addon1" value="{{category.name}}">
+            <input name="name" type="text" class="form-control" placeholder="Nombre de producto" aria-label="Nombre de producto" aria-describedby="basic-addon1" value="{{category.name}}" required>
         </div>
         <!-- DESCRIPTION -->
         <div class="input-group mb-3">
