Rediseño en ventana POS, para la lista de productos.

--- a/core/pos/templates/pos/product_card.html
+++ b/core/pos/templates/pos/product_card.html
@@ -2,25 +2,22 @@
     <div class="flex-fill">
         <!-- Barra lateral izquierda -->
          <!-- Barra superior -->
-        <div class="flex-fill">
+        <div class="d-flex justify-content-between mt-3 mb-3">
             <b class="m-1 fs-6">Producto</b>
-        </div>
-        <!-- Barra inferior -->
-        <div class="p-2" style="height: 50px;">
-            <div class="input-group">
+            <div class="input-group" style="width: 500px;">
                 <button type="button" class="btn btn-outline-secondary">-</button>
                 <input type="number" name="" id="" class="form-control" placeholder="0">
                 <button type="button" class="btn btn-outline-secondary">+</button>
             </div>
+            <div class="" style="width: 150px;">
+                <!-- Barra lateral derecha -->
+                <div id="pPrice" class="text-center h-100 align-content-center">
+                    <h4>
+                        $
+                        <span>4000</span>
+                    </h4>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="" style="width: 150px;">
-        <!-- Barra lateral derecha -->
-         <div id="pPrice" class="text-center h-100 align-content-center">
-            <h4>
-                $
-                <span>4000</span>
-            </h4>
-         </div>
     </div>
 </div>
