--- a/core/pos/templates/pos/index.html
+++ b/core/pos/templates/pos/index.html
@@ -30,12 +30,18 @@
     <script src="{% static 'js/jquery-confirm.min.js' %}"></script>
     <script src="{% static 'js/jquery.priceformat.min.js' %}"></script>
     <script src="{% static 'pos/utils/js/orderReception.js' %}"></script>
-    <div class="d-flex align-items-stretch p-3" style="height: 100vh;">
-        <div class="p-2 border flex-fill">
-            <!-- Barra lateral izquierda -->
-            {% include 'pos/product_list.html' %}
+    <div class="position-absolute z-3 bg-opacity-50 bg-black" id="dProductList" style="width: 100vw; height: 100vh; display: none;">
+        <!-- Barra lateral izquierda -->
+         <div class="bg-body p-2 border" style="width: 85vw; height: 100vh;">
+          {% include 'pos/product_list.html' %}
+         </div>
+    </div>
+    <div class="d-flex align-items-stretch" style="height: 100vh;">
+        <div class="flex-fill border bg-secondary-subtle pointer align-content-center text-center" id="bOpenProductList" style="width: 50px;">
+          <!-- Boton de despliegue de productos -->
+          <span><i class="fas fa-caret-right"></i></span>
         </div>
-        <div class="d-flex flex-column" style="width: 500px;">
+        <div class="d-flex flex-column" style="width: 95vw;">
             <!-- Barra lateral derecha -->
             {% include 'pos/order_sumary.html' %}
         </div>
