--- a/core/products/templates/products/create.html
+++ b/core/products/templates/products/create.html
@@ -53,8 +53,7 @@
         <div class="input-group mb-3">
             <h6 class=" navbar-text pe-3">Código de barras:</h6>
             <span class="input-group-text"><span class="fas fa-barcode"></span></span>
-            <input name="bar_code" type="text" class="form-control" id="bar-code" placeholder="Código de barras" aria-label="Código de barras">
-            <label class="btn btn-outline-secondary" for="bar-code">Editar</label>
+            <input name="bar_code" type="text" class="form-control" id="bar-code" placeholder="Código de barras" aria-label="Código de barras" readonly>
         </div>
         <!-- INVENTORY TO NEW PRODUCT -->
         <div id="invDiv" style="display: none;">
@@ -77,7 +76,7 @@
         </div>
     </form>
 </div>
-
+{% include "utils/bcSocketHandler.html" with input_id="bar-code" %}
 <script>
 
     $(document).ready(function() {
@@ -86,12 +85,6 @@
             let current = $(this).val();
             let buy_price = (current/1.20).toFixed();
             $("#cBuyPrice").val(buy_price);
-        });
-        $('#bar-code').on('keydown', function(event) {
-            event.preventDefault();
-            if (event.keyCode === 13) {
-                $('#bar-code').prop("readonly", true)
-            }
         });
         $("#btn-inv").click(function (e) {
             $("#invDiv").toggle();
