--- a/core/dashboard/templates/sidebar.html
+++ b/core/dashboard/templates/sidebar.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Project</title>
+        <title>El Titanic</title>
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/main2.css' %}">
@@ -72,6 +72,5 @@
         {% endblock %}
 
     </div>
-    <script src="{% static 'js/main3.js' %}"></script>
 </body>
 </html>
