--- a/core/pos/templates/pos/index.html
+++ b/core/pos/templates/pos/index.html
@@ -44,9 +44,8 @@
             <!-- Barra lateral derecha -->
             {% include 'pos/order_sumary.html' %}
         </div>
-        <script src="{% static 'pos/utils/js/productForm.js' %}"></script>
-        <script src="{% static 'pos/utils/js/makeOrder.js' %}"></script>
-        <script src="{% static 'pos/utils/js/orderReception.js' %}"></script>
+        <script src="{% static 'js/productForm.js' %}"></script>
+        <script src="{% static 'js/orderReception.js' %}"></script>
     </div>
     <script>
         new DataTable('#productos', {
